update .enf file

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Firebase Configuration
 
-VITE_FIREBASE_API_KEY="AIzaSyCCILZv554Y-QhEc65P3kwyvRBbyKf-hEg"
-VITE_FIREBASE_AUTH_DOMAIN="gratitude-journal-10815.firebaseapp.com"
-VITE_FIREBASE_PROJECT_ID="gratitude-journal-10815"
-VITE_FIREBASE_STORAGE_BUCKET="gratitude-journal-10815.firebasestorage.app"
-VITE_FIREBASE_MESSAGING_SENDER_ID="786633771396"
-VITE_FIREBASE_APP_ID="1:786633771396:web:d5580e39b6fd30e73fb5d1"
+aVITE_FIREBASE_API_KEY=""
+VITE_FIREBASE_AUTH_DOMAIN=""
+VITE_FIREBASE_PROJECT_ID=""
+VITE_FIREBASE_STORAGE_BUCKET=""
+VITE_FIREBASE_MESSAGING_SENDER_ID=""
+VITE_FIREBASE_APP_ID=""
